Autogradのチュートリアル作成

--- a/200409_pytorch_tutorial.ipynb
+++ b/200409_pytorch_tutorial.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1tlFJCiZtSD4_XSiIYljpPSHiYU80fdYg",
-      "authorship_tag": "ABX9TyPogLA/s7qjc6VBeR3dr7+f",
+      "authorship_tag": "ABX9TyMarPUpkemwwhJzAhxnDLKt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -721,9 +721,363 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jD5xR2DQDQ0t"
+      },
+      "source": [
+        "# Autograd tutorial"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "VxCnf16M7xqj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VxCnf16M7xqj",
+        "outputId": "ac16c66b-9f32-4eb3-e166-634d4ebf9441"
+      },
+      "source": [
+        "# requires_gradでは，requires_grad=Trueとすることで微分対象のtensorを指定します\n",
+        "# .backward()で勾配（微分値）を取得\n",
+        "x = torch.ones(2, 2, requires_grad=True)\n",
+        "x"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1.],\n",
+              "        [1., 1.]], requires_grad=True)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nFxPc8M0DmmA",
+        "outputId": "8de3eaec-9b74-40d2-ed19-c2636b21b115"
+      },
+      "source": [
+        "y = x + 2\n",
+        "y"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[3., 3.],\n",
+              "        [3., 3.]], grad_fn=<AddBackward0>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RtdVxvzUDzWx",
+        "outputId": "6d279f69-8f6f-4dc1-e232-9c8f8c5a78e4"
+      },
+      "source": [
+        "# Pytorchのなかで計算式を覚えている。\n",
+        "# 属性に勾配データを保持\n",
+        "y.grad_fn"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<AddBackward0 at 0x7fade01aaf10>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VwyvsN2-D50v",
+        "outputId": "ab30ffb5-2645-4e9b-ba86-e51683b6396a"
+      },
+      "source": [
+        "z = y * y * 3\n",
+        "z"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[27., 27.],\n",
+              "        [27., 27.]], grad_fn=<MulBackward0>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AsINjN-0EQ-v",
+        "outputId": "96a4f4c2-a9f2-488c-e858-fe087df4ff29"
+      },
+      "source": [
+        "out = z.mean()\n",
+        "out"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(27., grad_fn=<MeanBackward0>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9un_thWGHDjd"
+      },
+      "source": [
+        "## requires_gradのセットと反転"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8rCEvnr9HLFR"
+      },
+      "source": [
+        "a = torch.randn(2,2)"
+      ],
+      "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1VK4TzbXHP-x",
+        "outputId": "515d1e82-e3a9-4082-937f-94d7817a4ae0"
+      },
+      "source": [
+        "a"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.1488, -0.4028],\n",
+              "        [-1.5223, -0.4464]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CCj0j7uLHRzD",
+        "outputId": "4c048a11-5932-460d-848d-3ae63f19ff86"
+      },
+      "source": [
+        "a.requires_grad"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zc7DfmJGHVoz",
+        "outputId": "c08b5d59-f97a-46a6-d862-bc97dbde2d9b"
+      },
+      "source": [
+        "a.requires_grad_(True)"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.1488, -0.4028],\n",
+              "        [-1.5223, -0.4464]], requires_grad=True)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s9TZo-SdHZ9m"
+      },
+      "source": [
+        "b = (a * a).sum()"
+      ],
+      "execution_count": 94,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GMTDANN8He2S",
+        "outputId": "6115f0f2-65cf-4090-cab3-d6c6aea4722d"
+      },
+      "source": [
+        "b"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(2.7012, grad_fn=<SumBackward0>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lK_yATLpIL6N"
+      },
+      "source": [
+        "## backward()で微分値を求める。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "imd3b_SbHhm6"
+      },
+      "source": [
+        "out.backward()"
+      ],
+      "execution_count": 96,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n_SzFGR5JIM4",
+        "outputId": "ba30152f-e900-4400-c92c-0e359357633c"
+      },
+      "source": [
+        "x.grad"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4.5000, 4.5000],\n",
+              "        [4.5000, 4.5000]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UsvJk5l4KABD"
       },
       "source": [
         ""
